--- a/index2.html
+++ b/index2.html
@@ -142,7 +142,7 @@
       <div class="profile-menu">
         <a href="profile.html" id="nav-profile">👤 Профиль</a>
         <a href="settings.html" id="nav-settings">⚙️ Баптаулар</a>
-        <a href="#" id="nav-logout">🚪 Шығу</a>
+        <a href="index.html" id="nav-logout">🚪 Шығу</a>
       </div>
       <a href="index2.html" id="nav-home">Басты бет</a>
       <a href="courses2.html" id="nav-courses">Курстар</a>
@@ -249,3 +249,4 @@
   </script>
 </body>
 </html>
+
